[tool.poetry]
name = "hacker-news"
version = "0.1.0"
description = ""
authors = ["abdelrahman ashour <abdelrahmanashour45@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
